--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="/logo.png" />
     <title>Torex-Talk — Telegram boshqaruvi va AI-avtojavob platformasi</title>
     <meta name="description" content="Torex-Talk — Telegram hisoblarini boshqarish, mass xabar yuborish, AI-avtojavob, rejalashtirish va tahlillar. Minimalistik va zamonaviy veb-ilova.">
     <meta name="theme-color" content="#0ea5b7">
